Cart label alignment issue in Mac-Safari

--- a/assets/homepage.css
+++ b/assets/homepage.css
@@ -181,6 +181,7 @@ button.account-button.header-actions__action span svg {
 span.header-icons-label {
     display: flex;
     align-items: center;
+    margin: auto;
 }
 a.slider-overlay-link {
     position: absolute;
